# qa_guru_py_10_18

./: pyproject.toml
